--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 jehovakel_ex_event_store-*.tar
 
+# set local variables
+.envrc
