--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,12 +1,13 @@
 {
     "name": "jehovakel_ex_event_store",
     "dockerComposeFile": [
+        "../docker-compose.yml",
         "docker-compose.yml"
     ],
     "service": "devcontainer",
     "workspaceFolder": "/workspace",
-    // "onCreateCommand": ".devcontainer/bin/onCreateCommand",
-    // "updateContentCommand": ".devcontainer/bin/updateContentCommand",
+    "onCreateCommand": ".devcontainer/bin/onCreateCommand",
+    "updateContentCommand": ".devcontainer/bin/updateContentCommand",
     "customizations": {
         "codespaces": {
             "repositories": {
